additional work on legend

--- a/legend.html
+++ b/legend.html
@@ -11,7 +11,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <h1 id="title">Monthly Global Land-Surface Temperature</h1>
     <h2 id = "description">1753 - 2015: base temperature 8.66℃</h2>
-    <div id="appContainer">
+    <div id="legendContainer">
   
     
     </div>
