--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
   
     
     </div>
+    <div id ="legendContainer">
+
+    </div>
 
     <script src="heatmap.js"></script>
+    <script src="legend.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
